# opentargets2wikidata

./: .gitignore  README.md  drug_qids_cache.pkl  linkedTargets.ttl  pyproject.toml  triples.csv
data/: download.sh
results/: drug_qids_cache.pkl  linkedDiseases.tsv  linkedTargets.tsv  linkedTargets.ttl  target_qids_cache.pkl
src/: add_linked_diseases_to_wikidata.py  add_linked_targets_to_wikidata.py  convert_linkedtargets_coments.py  convert_linkedtargets_to_wikidata.py  extract_linkedDisease_graph.py  extract_linkedtargets_subgraph.py
src/dicts/: action_types.json
